# finapp

./: .gitignore  FinExpRepV4.9_BACKUP.xlsx  LICENSE  Personal_Finance_Normalized.xlsx  README.md  generate_icon.py  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
docs/: 00-spreadsheet-findings.md  01-PRD.md  02-architecture.md  03-data-model.md  04-import-pipeline.md  05-testing-guide.md  06-ai-features.md  07-codebase-guide.md  08-maintenance-guide.md  09-known-limitations.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: analytics.rs  expenses.rs  import.rs  mod.rs  settings.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs
src-tauri/src/import/: mod.rs  normalizer.rs  parser.rs
src/components/layout/: Layout.tsx
src/pages/: AmazonImport.tsx  Assistant.tsx  Categories.tsx  GmailImport.tsx  Import.tsx  Overview.tsx  Settings.tsx  Spreadsheet.tsx  Transactions.tsx  Trends.tsx
src/services/: ai.ts  amazon.ts  api.ts  gmail.ts  nlp.ts  prediction.ts
src/stores/: analyticsStore.ts  expenseStore.ts  settingsStore.ts
src/theme/: index.ts
src/types/: index.ts
tests/: setup.ts
tests/unit/: nlp.test.ts  prediction.test.ts
